finish swagger
