# app/api/auth.py
@@ -9,6 +9,7 @@ token_auth = HTTPTokenAuth()
 
 @basic_auth.verify_password
 def verify_password(username, password):
+    print(username, password)
     user = User.query.filter_by(username=username).first()
     if user is None:
         return False
